--- a/1_해시/5_베스트앨범.md
+++ b/1_해시/5_베스트앨범.md
@@ -51,3 +51,6 @@ class Solution {
     }
 }
 ```
+
+### 참고 : https://20240228.tistory.com/53
+### Stream 문법 : https://hsb422.tistory.com/entry/%E3%85%81%EC%9E%90%EB%B0%94-PART%EC%8A%A4%ED%8A%B8%EB%A6%BC
